# goniometer

./: CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
cmake/: ObsPluginHelpers.cmake
data/: goniometer.effect
data/locale/: en-US.ini
packaging/debian/: changelog  control  copyright
packaging/fedora/: obs-studio-plugin-goniometer.spec  obs-studio-plugin-simple-template.spec
src/: goniometer-dock.cpp  goniometer-dock.hpp  goniometer.c  goniometer.h  plugin-macros.h.in  plugin-main.c  util.c  util.h
test-onsdriver/: test_plugin_load.py
